--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@apollo/client": "^3.4.16",
     "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-navigation/native": "^6.0.6",
     "graphql": "^15.7.2",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-appearance": "^0.3.4",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.1"
   },
